--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: TechTovar
 description: From practical tips to deep dives into the Automation and Cloud trends
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/jtovarro/techtovar.github.io/master/images/logo.jpg
+avatar: https://raw.githubusercontent.com/jtovarro/techtovar.github.io/master/images/pic.jpeg
 
 #
 # Flags below are optional
