--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: TechTovar
 
 # Short bio or description (displayed in the header)
-description: From practical tips to deep dives into the Automation and Cloud trends
+description: Welcome abroad! From practical tips to deep dives into the Automation and Cloud trends
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/jtovarro/techtovar.github.io/master/images/logo.jpeg
@@ -21,12 +21,12 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: https://github.com/jtovarro
   instagram:
-  linkedin:
+  linkedin: https://www.linkedin.com/in/juancarlostovarrodriguez/
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
