--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/jtovarro
+  github: jtovarro
   instagram:
-  linkedin: https://www.linkedin.com/in/juancarlostovarrodriguez/
+  linkedin: juancarlostovarrodriguez
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
