--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: TechTovar
+name: TechTovar Blog
 
 # Short bio or description (displayed in the header)
 description: Welcome abroad! From practical tips to deep dives into the Automation and Cloud trends
