--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: TechTovar Blog
 
 # Short bio or description (displayed in the header)
-description: From practical tips to deep dives into the Automation and Cloud trends
+description: Diving into the Automation and Cloud trends
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/jtovarro/techtovar.github.io/master/images/logo.jpeg
